--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,11 +1,9 @@
 <div class="list-wrap">
 <% @lists.each do |list| %>
  <div class="list-box">
-  <% if list.image.attached? %>
-   <%= image_tag list.image, size: "200*200" %>
-  <% else %>
-   <%= image_tag 'no_image', size: "200*200" %>
-  <% end %>
+  <p>画像</p>
+   <%= image_tag list.image, size: "200x200" %>
+
   <div class="list-comment">
     <span class="list-body"><%= list.body %></span>
     <span class="list-title"><%=link_to list.title, list_path(list.id) %></span>
